# acados

./: .gitmodules  CMakeLists.txt  acados_config.txt
acados/dense_qp/: dense_qp_qpoases.c  dense_qp_qpoases.h
acados/ocp_nlp/: Makefile  ocp_nlp_common.c  ocp_nlp_common.h  ocp_nlp_cost_ls.c  ocp_nlp_dynamics_common.h  ocp_nlp_dynamics_cont.c  ocp_nlp_dynamics_cont.h  ocp_nlp_gn_sqp.c  ocp_nlp_gn_sqp.h  ocp_nlp_sqp.c  ocp_nlp_sqp_rti.c  ocp_nlp_zo_sqp.c  ocp_nlp_zo_sqp.h
acados/ocp_qp/: ocp_qp_condensing_qpoases.c  ocp_qp_hpmpc.c  ocp_qp_hpmpc.h
acados/sim/: sim_algebraic_solver.c  sim_algebraic_solver.h  sim_new_lifted_irk_integrator.c
acados/utils/: print.c
ci/linux/: dispatch.sh
cmake/: acados_sources.cmake
cross_build/: crosscompile_1007.cmake
examples/: test_nmpc_pendulum_hpmpc_libstr_pt.c
examples/acados_matlab_octave/linear_mass_spring_model/: env.sh
examples/acados_matlab_octave/pendulum_on_cart_model/: example_closed_loop.m
examples/acados_matlab_octave/test/: test_ocp_linear_dae.m
examples/acados_python/pmsm_example/: generate_c_code_embedded.py
examples/acados_python/qpoases_bug/: pacejka_example_test.py  pacejka_model.py  pacejka_settings.py  reduced_example_test.py  reduced_model.py  reduced_settings.py
examples/acados_python/race_cars/: acados_settings_dev.py
examples/acados_python/rsm_example/: generate_c_code.py
examples/acados_python/zo_sqp/: minimal_example_closed_loop.py
examples/c/: CMakeLists.txt  Makefile  configure_nonlinear_chain_example.py  generate_table.py  mass_spring_offline_fcond_qpoases_split.c  nonlinear_chain_ocp_nlp_no_interface.c  nonlinear_chain_ocp_nlp_no_interface_nmpc.c  nonlinear_chain_ocp_nlp_no_interface_nmpc_code_generation.c  nonlinear_chain_ocp_nlp_no_interface_nmpc_code_generation.tmp  plot_results.py  quadcopter_abs_omega_ocp_nlp.c  simple_dae_example.c
examples/c/quadcopter_abs_omega_model/: dyn.m  jac_quadcopter.c  ls_res_end_quadcopter.c  ls_res_eval.c  ls_res_quadcopter.c  myquat2eul.m  quadcopter_abs_omega.m  quadcopter_model.c  vde_adj_quadcopter.c  vde_forw_quadcopter.c  vde_hess_quadcopter.c
examples/c/quadcopter_model/: ls_res_end_quadcopter.c  ls_res_quadcopter.c  quadcopter.m
interfaces/acados_c/: ocp_nlp_interface.c  ocp_nlp_interface.h  sim_interface.c  sim_interface.h
interfaces/acados_matlab_octave/: acados_ocp.m  acados_ocp_model.m
interfaces/acados_template/: setup.py
interfaces/acados_template/acados_template/: acados_layout.json  acados_ocp.py  acados_ocp_nlp.py  acados_ocp_solver.py  generate_c_code_constraint_e.py  generate_c_code_explicit_ode.py  generate_solver.py  ocp_nlp_render_arguments.py
interfaces/matlab_experimental/: inner_class_1.m  inner_class_2.m  main.m  outer_class.m
logs/NMPC2018_log_files/blasfeo_haswell/: LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_3_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_3_IRK_STAGES_NUM_3.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_3_IRK_STAGES_NUM_4.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_3_IRK_STAGES_NUM_6.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_3_IRK_STAGES_NUM_8.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_4_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_4_IRK_STAGES_NUM_3.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_4_IRK_STAGES_NUM_4.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_4_IRK_STAGES_NUM_6.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_4_IRK_STAGES_NUM_8.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_5_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_5_IRK_STAGES_NUM_3.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_5_IRK_STAGES_NUM_4.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_5_IRK_STAGES_NUM_6.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_5_IRK_STAGES_NUM_8.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_3_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_3_IRK_STAGES_NUM_3.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_3_IRK_STAGES_NUM_4.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_3_IRK_STAGES_NUM_6.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_3_IRK_STAGES_NUM_8.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_4_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_4_IRK_STAGES_NUM_3.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_4_IRK_STAGES_NUM_4.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_4_IRK_STAGES_NUM_6.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_4_IRK_STAGES_NUM_8.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_5_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_5_IRK_STAGES_NUM_3.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_5_IRK_STAGES_NUM_4.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_5_IRK_STAGES_NUM_6.txt  LOG_FILE_OFFLINE_COND_0_NN_20_NUM_FREE_MASSES_5_IRK_STAGES_NUM_8.txt  LOG_FILE_OFFLINE_COND_0_NN_30_NUM_FREE_MASSES_3_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_30_NUM_FREE_MASSES_3_IRK_STAGES_NUM_3.txt  LOG_FILE_OFFLINE_COND_0_NN_30_NUM_FREE_MASSES_3_IRK_STAGES_NUM_4.txt  LOG_FILE_OFFLINE_COND_0_NN_30_NUM_FREE_MASSES_3_IRK_STAGES_NUM_6.txt  LOG_FILE_OFFLINE_COND_0_NN_30_NUM_FREE_MASSES_3_IRK_STAGES_NUM_8.txt  LOG_FILE_OFFLINE_COND_0_NN_30_NUM_FREE_MASSES_4_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_30_NUM_FREE_MASSES_4_IRK_STAGES_NUM_3.txt  LOG_FILE_OFFLINE_COND_0_NN_30_NUM_FREE_MASSES_4_IRK_STAGES_NUM_4.txt  LOG_FILE_OFFLINE_COND_0_NN_30_NUM_FREE_MASSES_4_IRK_STAGES_NUM_6.txt  LOG_FILE_OFFLINE_COND_0_NN_30_NUM_FREE_MASSES_4_IRK_STAGES_NUM_8.txt  (+50 more)
logs/NMPC2018_log_files/blasfeo_haswell_large_wall_03/: LOG_FILE_OFFLINE_COND_0_NN_100_NUM_FREE_MASSES_2_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_100_NUM_FREE_MASSES_4_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_100_NUM_FREE_MASSES_6_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_100_NUM_FREE_MASSES_8_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_2_IRK_STAGES_NUM_2.txt  LOG_FILE_OFFLINE_COND_0_NN_10_NUM_FREE_MASSES_2_IRK_STAGES_NUM_3.txt  (+158 more)
(+74 files in other folders)
